# stl-pack

./: .gitignore  CONTRIBUTING.md  LICENCE.md  README.md  THIRD_PARTY_NOTICES.md  biome.json  package-lock.json  package.json  todolist.md  vite.config.ts
.github/workflows/: cicd.yml
src/: App.vue  bindings.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  robo-icon.icns
src-tauri/src/: compressors.rs  error.rs  file_handlers.rs  lib.rs  main.rs  models.rs  settings.rs
src-tauri/src/file/: commands.rs  compressors.rs  mod.rs  storage.rs  utils.rs  writer.rs
src-tauri/src/image/: crop.rs  handling.rs  mod.rs
src/components/: DateInput.vue  DirInput.vue  FileInput.vue  FileSelect.vue  ImagePreview.vue  ImageSelect.vue  ModalView.vue  ModelOverview.vue  MonthYearInput.vue  Switch.vue  TagInput.vue  TextArea.vue  TextInput.vue  ToastContainer.vue  View.vue
src/composables/: useFileSelect.ts  useOS.ts
src/stores/: releasesStore.ts  toastStore.ts
src/views/: AddSTL.vue  CreateRelease.vue  Finalize.vue  Settings.vue
