[package]
name = "stl-pack"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stl_pack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2.5.0"
smartcrop2 = "0.4.0"
image = "0.25.6"
once_cell = "1.21.1"
specta = "2.0.0-rc.22"
tauri-specta = {  version = "2.0.0-rc.21", features = ["typescript", "derive"] }
specta-typescript = "0.0.9"
tauri-plugin-dialog = "2"
sevenz-rust = "0.6.1"
